--- a/views/send.ejs
+++ b/views/send.ejs
@@ -131,7 +131,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/logo.png" alt="Logo" class="logo">
+            <img src="/images/logo.png" alt="Logo" class="logo">
             <h1>Send Anonymous Message</h1>
         </div>
         <div class="message-box">
