--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,6 +75,20 @@
       text-decoration: underline;
     }
   </style>
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Welcome to Say Ya Mind">
+  <meta property="og:description" content="Share your thoughts anonymously and receive feedback on Say Ya Mind.">
+  <meta property="og:image" content="https://i.imgur.com/r7I7MUC.jpeg">
+  <meta property="og:url" content="https://say-ya-mind.onrender.com">
+  <meta property="og:type" content="website">
+
+  <!-- Additional Meta Tags for Twitter (optional) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Welcome to Say Ya Mind">
+  <meta name="twitter:description" content="Share your thoughts anonymously and receive feedback on Say Ya Mind.">
+  <meta name="twitter:image" content="https://i.imgur.com/r7I7MUC.jpeg">
+
 </head>
 <body>
   <div class="container">
