--- a/views/send.ejs
+++ b/views/send.ejs
@@ -127,6 +127,19 @@
             text-decoration: underline;
         }
     </style>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Send Anonymous Message to <%= username %>">
+    <meta property="og:description" content="Send an anonymous message to <%= username %> on Say Ya Mind.">
+    <meta property="og:image" content="https://i.imgur.com/r7I7MUC.jpeg">
+    <meta property="og:url" content="https://say-ya-mind.onrender.com/send/<%= username %>">
+    <meta property="og:type" content="website">
+
+    <!-- Additional Meta Tags for Twitter (optional) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Send Anonymous Message to <%= username %>">
+    <meta name="twitter:description" content="Send an anonymous message to <%= username %> on Say Ya Mind.">
+    <meta name="twitter:image" content="https://i.imgur.com/r7I7MUC.jpeg">
+
     <script>
         function showSuccessMessage() {
             alert("Your message has been sent successfully!");
