--- a/views/send.ejs
+++ b/views/send.ejs
@@ -133,12 +133,14 @@
     <meta property="og:image" content="https://i.imgur.com/r7I7MUC.jpeg">
     <meta property="og:url" content="https://say-ya-mind.onrender.com/send/<%= username %>">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Say Ya Mind">
 
     <!-- Additional Meta Tags for Twitter (optional) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Send Anonymous Message to <%= username %>">
     <meta name="twitter:description" content="Send an anonymous message to <%= username %> on Say Ya Mind.">
     <meta name="twitter:image" content="https://i.imgur.com/r7I7MUC.jpeg">
+    <meta name="twitter:url" content="https://say-ya-mind.onrender.com/send/<%= username %>">
 
     <script>
         function showSuccessMessage() {
